# client

./: .gitignore  Cargo.toml  index.html  package-lock.json  package.json
.github/workflows/: build.yml  version-bump.yml
certs/: chacha_key.txt  jwt_secret.txt  server_cert.pem  server_key.pem  spki_pin.txt
protocol/: Cargo.toml
protocol/src/: lib.rs
server/certs/: server_cert.pem  server_key.pem
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  chacha_key.txt  embedded_key.pem  jwt_secret.txt  spki_pin.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: binary.rs  config.rs  crypto.rs  lib.rs  main.rs  security.rs  state.rs  types.rs  ws.rs
src-tauri/src/commands/: adb.rs  auth.rs  config.rs  logs.rs  marketplace.rs  mod.rs  projects.rs
src-tauri/tools/: patch_pe.py  verify_pe.py
src/components/layout/: Sidebar.tsx  TitleBar.tsx
src/components/pages/: AdbPage.tsx  Dashboard.tsx  EditorPage.tsx  InjectionPage.tsx  LoginPage.tsx  LogsPage.tsx  MarketplacePage.tsx  SettingsPage.tsx
src/components/ui/: FridaLogo.tsx  badge.tsx  card.tsx  index.ts  script-editor.tsx
src/hooks/: tauri.ts
src/lib/: theme.ts  toast.ts
src/test/: auth-state.test.ts
src/types/: index.ts
