[workspace]
members = ["src-tauri", "protocol"]
resolver = "2"

[workspace.package]
version = "0.1.53"
edition = "2024"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[profile.release]
strip = true

[patch.crates-io]
glib = { git = "https://github.com/gtk-rs/gtk-rs-core.git", tag = "0.20.0" }
