[package]
name = "re-frida-tauri"
version.workspace = true
edition.workspace = true

[lib]
name = "re_frida_tauri_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
re-frida-protocol = { path = "../protocol" }

serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

tokio = { version = "1", features = ["full"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"

# WebSocket client
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tokio-native-tls = "0.3"
futures = "0.3"
native-tls = "0.2"

# Crypto
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
chacha20poly1305 = "0.10"
hmac = "0.12"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
x509-cert = "0.2"

# HTTP
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }

# Platform
dirs = "6"
open = "5"
url = "2"
regex = "1"
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
debug = []
